# gitlab-mcp

./: .gitignore  .pylintrc  CLAUDE.md  Makefile  PYCHARM_SETUP.md  README.md  TEST_STRATEGY.md  pyproject.toml  pyrightconfig.json  sample.json  test_mr_summary.py  test_ws_auth.py
.semgrep/: rules.yaml
pylint_plugins/: __init__.py  mcp_checker.py
src/gitlab_mcp/: __init__.py  client.py  config.py  server.py  session.py
stubs/gitlab/: base.pyi  py.typed
tests/: conftest.py  test_base_transforms.py  test_client.py  test_config.py  test_discussion_transforms.py  test_discussions_pook.py  test_downloads_pook.py  test_draft_notes_pook.py  test_graphql_pook.py  test_issues.py  test_issues_pook.py  test_iterations_pook.py  test_labels_pook.py  test_merge_requests.py  test_milestones_pook.py  test_mr_pook.py  test_namespaces.py  test_namespaces_pook.py  test_pipelines.py  test_pipelines_pook.py  test_projects_pook.py  test_releases_pook.py  test_repository_pook.py  test_users_pook.py  test_wiki_pook.py
tests/fixtures/: blame.json  branch_comparison.json  commit_diff.json  commit_single.json  commits_list.json  contributors.json  draft_note_single.json  draft_notes_list.json  events_list.json  file_contents.json  group_iterations.json  group_projects.json  group_single.json  issue_discussions.json  issue_links.json  issue_list.json  issue_single.json  issue_time_stats.json  job_log_trace.txt  label_single.json  labels_list.json  milestone_burndown_events.json  milestone_issues.json  milestone_merge_requests.json  milestone_single.json  milestones_list.json  mr_list.json  (+27 more)
(+49 files in other folders)
